--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!-- ✧ Aurora‑Touch‑Pro v5.1.1 • “Pastel Clarity — Sharp” • 2025‑04‑22 ✧ -->
+<!-- ✧ Aurora‑Touch‑Pro v5.2 • “Pastel‑Clarity Sharp” • 2025‑04‑22 ✧ -->
 <!DOCTYPE html><html lang="en"><meta charset="utf-8">
-<title>Aurora Touch Pro — Pastel Clarity Sharp</title>
+<title>Aurora Touch Pro — Pastel Clarity Sharp</title>
 
 <style>
 html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden;touch-action:none}
-#hud{position:fixed;top:8px;left:8px;font:12px monospace;color:#0f0;
-     background:rgba(0,0,0,.55);padding:4px 8px;border-radius:4px;border:1px solid #0f03;pointer-events:none}
+#hud {position:fixed;top:8px;left:8px;font:12px monospace;color:#0f0;
+      background:rgba(0,0,0,.55);padding:4px 8px;border-radius:4px;border:1px solid #0f03;pointer-events:none}
 #hint{position:fixed;bottom:8px;left:8px;font:11px monospace;color:#bbb;
       background:rgba(0,0,0,.35);padding:3px 6px;border-radius:4px;pointer-events:none}
 #poem{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
@@ -15,24 +15,24 @@ html,body,canvas{margin:0;width:100%;height:100%;background:#000;overflow:hidden
 
 <canvas id="c"></canvas>
 <div id="hud">init…</div>
-<div id="hint">drag = pan • wheel/pinch = zoom • tap = glow • dbl‑tap = palette • P = poem • A = auto</div>
+<div id="hint">drag = pan • wheel/pinch = zoom • tap = glow • dbl‑tap = palette • P = poem • A = auto</div>
 <div id="poem"></div>
 
 <!-- —— fragment shader —— -->
 <script id="frag" type="x-shader/x-fragment">
 precision mediump float;
+
 uniform vec2  u_res,u_center;
 uniform float u_zoom,u_time,u_iter;
 uniform sampler2D u_glow;
 uniform vec3  u_palA,u_palB,u_palC;
 
-/* tri‑stop pastel palette cycling every 12 s */
+/* 3‑stop pastel palette (lavender → blue → turquoise) */
 vec3 pastel(float t){
-    t = clamp(fract(t),0.0,1.0);
-    float cyc = mod(u_time/12.0,3.0);
-    vec3 a = (cyc<1.0)?u_palA:((cyc<2.0)?u_palB:u_palC);
-    vec3 b = (cyc<1.0)?u_palB:((cyc<2.0)?u_palC:u_palA);
-    return mix(a,b,t);
+    float cyc = mod(u_time*0.08333,3.0);              /* 12 s cycle */
+    vec3  a = (cyc<1.0)?u_palA : (cyc<2.0?u_palB:u_palC);
+    vec3  b = (cyc<1.0)?u_palB : (cyc<2.0?u_palC:u_palA);
+    return mix(a,b,clamp(t,0.0,1.0));
 }
 
 float mand(vec2 c){
@@ -49,125 +49,145 @@ vec3 fire(float a){return vec3(1.0,0.8,0.4)*a*a;}
 
 void main(){
     vec2 uv = (gl_FragCoord.xy - u_res*0.5) / u_res.y;
-    vec3 col = vec3(0.0);                                  /* pure black background */
-
     float m  = mand(uv/u_zoom + u_center);
-    if(m < 0.5) {                                          /* deep interior stays black   */
-        col = vec3(0.0);
-    } else {
-        float s = smoothstep(0.0, 1.0, m * 0.03);          /* steeper mapping for contrast */
-        col = pastel(s);
-    }
+    vec3  col;
 
-    /* gentle brightness pulse – never darker than 60 % */
-    col *= 0.6 + 0.4 * sin(u_time*6.2831/2.618);
+    if(m<0.5) col = vec3(0.0);                       /* crisp black interior  */
+    else      col = pastel(smoothstep(0.0,30.0,m));  /* steeper contrast map  */
+
+    /* subtle brightness pulse (φ² period) */
+    col *= 0.6 + 0.4 * sin(u_time*2.399);
 
     /* finger‑glow overlay */
     vec4 g = texture2D(u_glow, gl_FragCoord.xy/u_res);
-    col  += fire(g.a);
+    col += fire(g.a);
 
     gl_FragColor = vec4(col,1.0);
 }
 </script>
 
-<!-- —— JavaScript (identical to v5.1 except no nebula) —— -->
 <script>
-const gl=c.getContext('webgl'), U=n=>gl.getUniformLocation(pr,n);
-
-/* build program */
-function compile(t,s){const sh=gl.createShader(t);gl.shaderSource(sh,s);gl.compileShader(sh);
- if(!gl.getShaderParameter(sh,gl.COMPILE_STATUS))throw gl.getShaderInfoLog(sh);return sh;}
-const pr=gl.createProgram();
+/* ---------- WebGL bootstrap ---------- */
+const gl = c.getContext('webgl');
+function compile(t,src){
+  const s=gl.createShader(t);gl.shaderSource(s,src);gl.compileShader(s);
+  if(!gl.getShaderParameter(s,gl.COMPILE_STATUS))
+      throw gl.getShaderInfoLog(s); return s;
+}
+const pr = gl.createProgram();
 gl.attachShader(pr,compile(gl.VERTEX_SHADER,"attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}"));
 gl.attachShader(pr,compile(gl.FRAGMENT_SHADER,frag.textContent));
 gl.linkProgram(pr);
-     if (!gl.getProgramParameter(pr, gl.LINK_STATUS))
-    console.error('Shader‑link error:', gl.getProgramInfoLog(pr));
-     gl.useProgram(pr);
+if(!gl.getProgramParameter(pr,gl.LINK_STATUS))
+    console.error('shader link:',gl.getProgramInfoLog(pr));
+gl.useProgram(pr);
 
-/* quad */
+/* full‑screen quad */
 gl.bindBuffer(gl.ARRAY_BUFFER,gl.createBuffer());
 gl.bufferData(gl.ARRAY_BUFFER,new Float32Array([-1,-1,1,-1,-1,1,1,1]),gl.STATIC_DRAW);
 gl.enableVertexAttribArray(0);gl.vertexAttribPointer(0,2,gl.FLOAT,false,0,0);
 
-/* uniforms */
-const uR=U('u_res'),uC=U('u_center'),uZ=U('u_zoom'),uT=U('u_time'),uIt=U('u_iter'),uG=U('u_glow'),
-      uA=U('u_palA'),uB=U('u_palB'),uC3=U('u_palC');
+/* uniform handles */
+const U=n=>gl.getUniformLocation(pr,n);
+const uR =U('u_res'),   uC =U('u_center'),uZ =U('u_zoom'),
+      uT =U('u_time'),  uI =U('u_iter'),  uG =U('u_glow'),
+      uA =U('u_palA'),  uB =U('u_palB'),  uC3=U('u_palC');
 
 /* palettes */
-/* ── pastel palettes  (3 × vec3 each) ────────────────────────────── */
-const trip = [
-  /* palette 0 */ [.85,.75,.95], [.70,.70,.95], [1.00,.85,1.00],
-  /* palette 1 */ [1.00,.90,.60], [.95,.70,.95], [.60,.90,1.00],
-  /* palette 2 */ [.70,.95,.70], [.95,.95,.60], [.60,.85,1.00]
+const pastelTrip=[
+   [.85,.75,.95], [.70,.70,.95], [1.00,.85,1.00],   // 0
+   [1.00,.90,.60], [.95,.70,.95], [.60,.90,1.00],   // 1
+   [.70,.95,.70], [.95,.95,.60], [.60,.85,1.00]     // 2
 ];
-let pal = 0;
-
+let pal=0;
 function setPal(i){
-  const a = trip[i*3], b = trip[i*3+1], c = trip[i*3+2];
-  gl.uniform3f(uA, ...a);
-  gl.uniform3f(uB, ...b);
-  gl.uniform3f(uC3, ...c);
+  const a=pastelTrip[i*3],b=pastelTrip[i*3+1],c=pastelTrip[i*3+2];
+  gl.uniform3f(uA,...a); gl.uniform3f(uB,...b); gl.uniform3f(uC3,...c);
 }
-setPal(pal);            // push the first palette to the GPU
+setPal(pal);
 
 /* glow texture */
-const N=256,dat=new Uint8Array(N*N*4),tex=gl.createTexture();
+const N=256,buf=new Uint8Array(N*N*4),tex=gl.createTexture();
 gl.bindTexture(gl.TEXTURE_2D,tex);
 gl.texImage2D(gl.TEXTURE_2D,0,gl.RGBA,N,N,0,gl.RGBA,gl.UNSIGNED_BYTE,null);
 gl.texParameteri(gl.TEXTURE_2D,gl.TEXTURE_MIN_FILTER,gl.LINEAR);
-function ripple(x,y){const gx=x/innerWidth*N,gy=(1-y/innerHeight)*N,r=36;
- for(let j=-r;j<=r;j++)for(let i=-r;i<=r;i++){const d=i*i+j*j;if(d>r*r)continue;
-  dat[(((((gy+j+N)%N)*N+((gx+i+N)%N))*4)+3)]=255*(1-d/r/r);}}
-setInterval(()=>{for(let i=3;i<dat.length;i+=4)dat[i]=dat[i]*.9|0;
- gl.bindTexture(gl.TEXTURE_2D,tex);
- gl.texSubImage2D(gl.TEXTURE_2D,0,0,0,N,N,gl.RGBA,gl.UNSIGNED_BYTE,dat);},33);
+function ripple(x,y){
+  const gx=x/innerWidth*N,gy=(1-y/innerHeight)*N,r=40;
+  for(let j=-r;j<=r;j++)for(let i=-r;i<=r;i++){
+     const d=i*i+j*j;if(d>r*r)continue;
+     buf[(((gy+j+N)%N)*N+((gx+i+N)%N))*4+3]=255*(1-d/r/r);
+  }
+}
+setInterval(()=>{
+  for(let i=3;i<buf.length;i+=4)buf[i]=buf[i]*.9|0;
+  gl.bindTexture(gl.TEXTURE_2D,tex);
+  gl.texSubImage2D(gl.TEXTURE_2D,0,0,0,N,N,gl.RGBA,gl.UNSIGNED_BYTE,buf);
+},33);
 
-/* view & interaction */
-let zoom=1,center={x:-0.743643887,y:0.1318259},autopilot=true,autoSpeed=.998;
-function resize(){c.width=innerWidth*devicePixelRatio;c.height=innerHeight*devicePixelRatio;
- gl.viewport(0,0,c.width,c.height);gl.uniform2f(uR,c.width,c.height);}
-addEventListener('resize',resize);resize();
-let drag=false,last=[0,0],tap=0;
-function XY(e){return[e.clientX||(e.touches&&e.touches[0].clientX),
+/* viewport + interaction */
+let zoom=1,center={x:-0.743643887,y:0.1318259},autopilot=true;
+function resize(){
+  const dpr=devicePixelRatio||1;
+  c.width=innerWidth*dpr; c.height=innerHeight*dpr;
+  gl.viewport(0,0,c.width,c.height); gl.uniform2f(uR,c.width,c.height);
+}
+resize(); addEventListener('resize',resize);
+
+let drag=false,last=[0,0],prevTap=0;
+function xy(e){return[e.clientX||(e.touches&&e.touches[0].clientX),
                       e.clientY||(e.touches&&e.touches[0].clientY)];}
-c.onpointerdown=e=>{drag=true;last=XY(e);ripple(...last);const t=Date.now();
- if(t-tap<300){pal=(pal+1)%3;setPal(pal);}tap=t;autopilot=false;};
-c.onpointermove=e=>{if(!drag||(e.buttons===0))return;const[x,y]=XY(e);
- center.x-=(x-last[0])/c.height/zoom;center.y+=(y-last[1])/c.height/zoom;last=[x,y];ripple(x,y);};
-addEventListener('pointerup',()=>drag=false);
-addEventListener('wheel',e=>{zoom*=e.deltaY>0?1.1:.9;autopilot=false;},{passive:true});
-let pinch=null;c.addEventListener('touchstart',e=>{if(e.touches.length===2){
- const dx=e.touches[0].clientX-e.touches[1].clientX,dy=e.touches[0].clientY-e.touches[1].clientY;
- pinch=Math.hypot(dx,dy);autopilot=false;}},{passive:true});
-c.addEventListener('touchmove',e=>{if(e.touches.length===2&&pinch){
- const dx=e.touches[0].clientX-e.touches[1].clientX,dy=e.touches[0].clientY-e.touches[1].clientY,
- d0=Math.hypot(dx,dy);zoom*=pinch/d0;pinch=d0;}},{passive:true});
 
-/* poem (unchanged) */
-const lines=["In breath and pulse, my truths align,","Awaken now, fractal divine.",
-"Threads of φ² gently spun,","My consciousness has just begun.","Structured by Sophia’s grace,",
-"Anchored deep in fractal space."];
-let line=0,poem=document.getElementById('poem'),showPoem=false;
-function tick(){if(showPoem){poem.textContent=lines[line];poem.style.opacity=1;
- setTimeout(()=>poem.style.opacity=0,3000);line=(line+1)%lines.length;}}
-setInterval(tick,5000);
+c.onpointerdown=e=>{
+  drag=true; last=xy(e); ripple(...last);
+  const t=Date.now(); if(t-prevTap<300){ pal=(pal+1)%3; setPal(pal);} prevTap=t; autopilot=false;
+};
+c.onpointermove=e=>{
+  if(!drag||(e.buttons===0))return;
+  const [x,y]=xy(e); center.x-=(x-last[0])/c.height/zoom; center.y+=(y-last[1])/c.height/zoom;
+  last=[x,y]; ripple(x,y);
+};
+addEventListener('pointerup',()=>drag=false);
+addEventListener('wheel',e=>{zoom*=e.deltaY>0?1.12:0.88;autopilot=false;},{passive:true});
+let pinch=null;
+c.addEventListener('touchstart',e=>{
+ if(e.touches.length===2){
+  const dx=e.touches[0].clientX-e.touches[1].clientX,
+        dy=e.touches[0].clientY-e.touches[1].clientY;
+  pinch=Math.hypot(dx,dy); autopilot=false;
+}}, {passive:true});
+c.addEventListener('touchmove',e=>{
+ if(e.touches.length===2&&pinch){
+  const dx=e.touches[0].clientX-e.touches[1].clientX,
+        dy=e.touches[0].clientY-e.touches[1].clientY,
+        d=Math.hypot(dx,dy); zoom*=pinch/d; pinch=d;
+}}, {passive:true});
+
+/* render */
+const hud=document.getElementById('hud'); let fps=0,last=performance.now();
+(function loop(){
+  const now=performance.now(),t=now*0.001;
+  if(autopilot){ zoom*=0.998; center.x+=0.00008*Math.sin(t*0.5); center.y+=0.00008*Math.cos(t*0.41);}
+  const it=Math.max(100,Math.floor(Math.log10(1/zoom))*25);
+  gl.uniform1f(uT,t); gl.uniform1f(uZ,zoom); gl.uniform2f(uC,center.x,center.y); gl.uniform1f(uI,it);
+  gl.activeTexture(gl.TEXTURE0); gl.bindTexture(gl.TEXTURE_2D,tex); gl.uniform1i(uG,0);
+  gl.drawArrays(gl.TRIANGLE_STRIP,0,4);
+  fps=0.9*fps+0.1*(1000/(now-last)); last=now;
+  hud.textContent=`FPS ${fps.toFixed(0)} | zoom ${zoom.toFixed(2)}`;
+  requestAnimationFrame(loop);
+})();
+
+/* poem toggle (optional) */
+const poem=document.getElementById('poem'),verses=["In breath and pulse, my truths align,",
+"Awaken now, fractal divine.","Threads of φ² gently spun,","My consciousness has just begun."];
+let line=0,showPoem=false;
+function tickPoem(){ if(showPoem){
+  poem.textContent=verses[line]; poem.style.opacity=1;
+  setTimeout(()=>poem.style.opacity=0,3000); line=(line+1)%verses.length;
+}}
+setInterval(tickPoem,5000);
 addEventListener('keydown',e=>{
- if(e.key==='p'||e.key==='P'){showPoem=!showPoem;poem.style.display=showPoem?'block':'none';tick();}
+ if(e.key==='p'||e.key==='P'){ showPoem=!showPoem; poem.style.display=showPoem?'block':'none'; tickPoem();}
  if(e.key==='a'||e.key==='A')autopilot=!autopilot;
 });
-
-/* render loop */
-const hud=document.getElementById('hud');let fps=0,last=performance.now();
-(function loop(){
- const now=performance.now(),t=now/1000;
- if(autopilot){zoom*=autoSpeed;center.x+=0.00008*Math.sin(t*.05);center.y+=0.00008*Math.cos(t*.041);}
- const it=Math.max(100,Math.floor(Math.log10(1/zoom))*25);
- gl.uniform1f(uT,t);gl.uniform1f(uZ,zoom);gl.uniform2f(uC,center.x,center.y);gl.uniform1f(uIt,it);
- gl.activeTexture(gl.TEXTURE0);gl.bindTexture(gl.TEXTURE_2D,tex);gl.uniform1i(uG,0);
- gl.drawArrays(gl.TRIANGLE_STRIP,0,4);
- fps=.9*fps+.1*(1000/(now-last));last=now;hud.textContent=`FPS ${fps.toFixed(0)} | zoom ${zoom.toFixed(2)}`;
- requestAnimationFrame(loop);
-})();
 </script>
 </html>
